jilles      2005/10/06 10:28:21 UTC	(20051006-2715)
  Log:
  Correct "too long" error message.
  

  Changes:	Modified:
  +1 -1		trunk/modules/memoserv/send.c (File Modified) 


jilles      2005/10/06 10:26:04 UTC	(20051006-2713)
  Log:
  - Fix send to self check with identify as
  - Correct MEMOLEN check
  - Improve "is target online" check a bit, not fully correct yet,
    but shouldn't crash anymore
  

  Changes:	Modified:
  +3 -3		trunk/modules/memoserv/forward.c (File Modified) 
  +5 -4		trunk/modules/memoserv/send.c (File Modified) 


pfish       2005/10/06 09:53:48 UTC	(20051006-2711)
  Log:
  Allow users to forward memos to the e-mail address listed on their registration.
  - Usage: NickServ SET EMAILMEMOS [ON|OFF]
  - The default is off.
  

  Changes:	Modified:
  +8 -0		trunk/modules/memoserv/forward.c (File Modified) 
  +9 -1		trunk/modules/memoserv/send.c (File Modified) 
  +9 -1		trunk/src/function.c (File Modified) 


kog         2005/10/06 09:36:45 UTC	(20051006-2709)
  Log:
  added notification of new memos - should probably be hook? - Kog
  

  Changes:	Modified:
  +7 -1		trunk/modules/nickserv/identify.c (File Modified) 


kog         2005/10/06 09:33:43 UTC	(20051006-2707)
  Log:
  added notification of new memos - should probably be hook? - Kog
  

  Changes:	Modified:
  +7 -1		trunk/modules/userserv/login.c (File Modified) 


pfish       2005/10/06 09:02:13 UTC	(20051006-2705)
  Log:
  make info aware of emailmemos
  

  Changes:	Modified:
  +7 -0		trunk/modules/nickserv/info.c (File Modified) 


kog         2005/10/06 08:56:07 UTC	(20051006-2703)
  Log:
  keeps track of new memo count via memoct_new in myuser_t. List will display new memo count 
  

  Changes:	Modified:
  +7 -2		trunk/modules/memoserv/delete.c (File Modified) 
  +3 -2		trunk/modules/memoserv/forward.c (File Modified) 
  +2 -2		trunk/modules/memoserv/list.c (File Modified) 
  +8 -2		trunk/modules/memoserv/read.c (File Modified) 